Created markup for the Library Page

--- a/resources/css/library.css
+++ b/resources/css/library.css
@@ -2,6 +2,7 @@
 body{
     font-family: 'manrope', sans-serif;
     background: url(./images/Background\ .svg);
+    overflow-x: hidden;
 }
 header{
     margin-bottom: 6rem;
